# Capturecard_Viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  app.rc  build.rs
src/: audio.rs  main.rs  screenshot.rs  settings.rs  ui.rs  video.rs
